Fixed overflow at bottom

--- a/src/main/resources/static/css/styles.css
+++ b/src/main/resources/static/css/styles.css
@@ -33,7 +33,7 @@
 }
 
 .wrapper {
-    height: 400px;
+    min-height: 400px;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
 }
@@ -98,6 +98,12 @@
 
 .login-form .register-form {
     display: none;
+}
+
+.notif {
+    font-size: 12px;
+    color: #d32f2f;
+    margin: 0 0 20px 0;
 }
 
 
